--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@
   --color-border-light: var(--border-light);
   --font-sans: var(--font-cascadia);
   --font-inter: var(--font-inter);
+  --font-work-sans: var(--font-work-sans);
   --font-horizon: var(--font-horizon);
 }
 
